--- a/boutTime/Base.lproj/Main.storyboard
+++ b/boutTime/Base.lproj/Main.storyboard
@@ -217,7 +217,7 @@
                                     <constraint firstItem="Zkp-AT-QRm" firstAttribute="height" secondItem="wjk-n3-grG" secondAttribute="height" id="swN-2X-I5P"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="U1r-ET-6nr">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="U1r-ET-6nr">
                                 <rect key="frame" x="134" y="584" width="107" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="U1r-ET-6nr" secondAttribute="height" multiplier="96:55" constant="35.436363636363637" id="Xdl-lc-6ar"/>
@@ -232,24 +232,46 @@
                                     <constraint firstAttribute="width" secondItem="FkH-jf-8B1" secondAttribute="height" multiplier="173:26" id="cOb-DR-qqT"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.209277451" green="0.59008461239999999" blue="0.74037194250000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="next_round_fail" translatesAutoresizingMaskIntoConstraints="NO" id="3vp-Xc-3EJ">
+                                <rect key="frame" x="122" y="590" width="131" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3vp-Xc-3EJ" secondAttribute="height" multiplier="22:5" constant="-23" id="Rzr-yK-i6M"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="next_round_success" translatesAutoresizingMaskIntoConstraints="NO" id="l48-Mz-IAM">
+                                <rect key="frame" x="122" y="590" width="131" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="l48-Mz-IAM" secondAttribute="height" multiplier="22:5" constant="-23" id="ghL-hI-G84"/>
+                                    <constraint firstAttribute="width" secondItem="l48-Mz-IAM" secondAttribute="height" multiplier="22:5" constant="-23" id="vI2-AP-DzS"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.16172695159912109" blue="0.29461014270782471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="FkH-jf-8B1" firstAttribute="top" secondItem="U1r-ET-6nr" secondAttribute="bottom" constant="8" id="3Ud-L2-gcP"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FkH-jf-8B1" secondAttribute="bottom" constant="8" id="3rv-hn-Lp7"/>
+                            <constraint firstItem="l48-Mz-IAM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3YW-Um-1jB"/>
                             <constraint firstItem="Y2A-bI-QKi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="16" id="6ce-8i-r2R"/>
                             <constraint firstItem="FkH-jf-8B1" firstAttribute="centerX" secondItem="U1r-ET-6nr" secondAttribute="centerX" id="6wz-xO-mNy"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="U1r-ET-6nr" secondAttribute="bottom" constant="42" id="BQt-3f-OCg"/>
                             <constraint firstItem="U1r-ET-6nr" firstAttribute="top" secondItem="APU-Js-98b" secondAttribute="bottom" constant="8" id="CZx-sS-waa"/>
                             <constraint firstItem="U1r-ET-6nr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DTJ-vN-aXf"/>
-                            <constraint firstItem="Y2A-bI-QKi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IwY-Qb-QQX"/>
+                            <constraint firstItem="l48-Mz-IAM" firstAttribute="top" secondItem="APU-Js-98b" secondAttribute="bottom" constant="14" id="FfO-2J-2sw"/>
+                            <constraint firstItem="Y2A-bI-QKi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Ket-ri-AkV"/>
+                            <constraint firstItem="l48-Mz-IAM" firstAttribute="width" secondItem="3vp-Xc-3EJ" secondAttribute="width" id="MK6-vW-gzB"/>
                             <constraint firstItem="Y2A-bI-QKi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mz6-y3-7if"/>
+                            <constraint firstItem="l48-Mz-IAM" firstAttribute="width" secondItem="l48-Mz-IAM" secondAttribute="height" multiplier="22:5" constant="-23" id="Uyd-PC-b6w"/>
+                            <constraint firstItem="FkH-jf-8B1" firstAttribute="top" secondItem="l48-Mz-IAM" secondAttribute="bottom" constant="8" id="d48-z9-7Bb"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="U1r-ET-6nr" secondAttribute="bottom" constant="42" id="fhJ-eK-fde"/>
+                            <constraint firstItem="3vp-Xc-3EJ" firstAttribute="top" secondItem="APU-Js-98b" secondAttribute="bottom" constant="14" id="iMx-uY-ylw"/>
+                            <constraint firstItem="3vp-Xc-3EJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rej-KN-BGy"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FkH-jf-8B1" secondAttribute="bottom" constant="8" id="yX6-0x-tI5"/>
+                            <constraint firstItem="FkH-jf-8B1" firstAttribute="top" secondItem="3vp-Xc-3EJ" secondAttribute="bottom" constant="8" id="yzi-Tu-sYj"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="correctAnswer" destination="l48-Mz-IAM" id="OAD-mb-JSu"/>
                         <outlet property="eventFirst" destination="GHv-lb-U41" id="3gd-y6-XNZ"/>
                         <outlet property="eventForth" destination="APU-Js-98b" id="TDp-jt-z5b"/>
                         <outlet property="eventSecond" destination="prw-hc-6xR" id="fPx-hE-Ra7"/>
@@ -260,12 +282,73 @@
                         <outlet property="halfDownSecond" destination="bVg-cU-ulN" id="o3C-JG-5VQ"/>
                         <outlet property="halfUpFirst" destination="rzn-rR-82L" id="Pcp-Vo-66s"/>
                         <outlet property="halfUpSecond" destination="reb-r3-HiL" id="dqM-Nc-n03"/>
+                        <outlet property="shakeToCompleteLabel" destination="FkH-jf-8B1" id="kUr-IS-Vw2"/>
                         <outlet property="timer" destination="U1r-ET-6nr" id="xRZ-Ua-Pcc"/>
+                        <outlet property="wrongAnswer" destination="3vp-Xc-3EJ" id="ecw-V3-ckR"/>
+                        <segue destination="945-UO-Igs" kind="presentation" id="HCX-Lq-UXo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-218.40000000000001" y="-44.527736131934034"/>
+            <point key="canvasLocation" x="-114" y="161"/>
+        </scene>
+        <!--End Game Controller-->
+        <scene sceneID="D5v-lm-3XG">
+            <objects>
+                <viewController storyboardIdentifier="endGame" id="945-UO-Igs" customClass="EndGameController" customModule="boutTime" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3vF-t9-YsH"/>
+                        <viewControllerLayoutGuide type="bottom" id="TtB-XW-EZI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MbO-sd-d6S">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cu4-PK-I2a">
+                                <rect key="frame" x="111" y="206" width="153" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Cu4-PK-I2a" secondAttribute="height" multiplier="173:26" id="hHf-f8-GO6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" red="0.209277451" green="0.59008461239999999" blue="0.74037194250000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iV4-SQ-Ryh">
+                                <rect key="frame" x="99" y="450" width="176" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="iV4-SQ-Ryh" secondAttribute="height" multiplier="136:41" id="Z5c-Aw-nR0"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="play_again"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAT-wb-2N0">
+                                <rect key="frame" x="91" y="257" width="193" height="105"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="EAT-wb-2N0" secondAttribute="height" multiplier="9:8" constant="74.875" id="zAB-5g-zlk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="53"/>
+                                <color key="textColor" red="0.98441702127456665" green="0.98107784986495972" blue="0.94344550371170044" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.1617171168" blue="0.29459536079999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Cu4-PK-I2a" firstAttribute="centerX" secondItem="MbO-sd-d6S" secondAttribute="centerX" id="ARx-Uo-JnW"/>
+                            <constraint firstItem="Cu4-PK-I2a" firstAttribute="centerY" secondItem="MbO-sd-d6S" secondAttribute="centerY" constant="-116" id="Cqy-6K-s9e"/>
+                            <constraint firstItem="EAT-wb-2N0" firstAttribute="centerX" secondItem="MbO-sd-d6S" secondAttribute="centerX" id="Ej8-6Z-42d"/>
+                            <constraint firstItem="TtB-XW-EZI" firstAttribute="top" secondItem="iV4-SQ-Ryh" secondAttribute="bottom" constant="164" id="JhE-E3-dc4"/>
+                            <constraint firstItem="Cu4-PK-I2a" firstAttribute="centerX" secondItem="MbO-sd-d6S" secondAttribute="centerX" id="Kl5-hi-qyH"/>
+                            <constraint firstItem="iV4-SQ-Ryh" firstAttribute="centerX" secondItem="MbO-sd-d6S" secondAttribute="centerX" id="dBb-3l-mIv"/>
+                            <constraint firstItem="EAT-wb-2N0" firstAttribute="centerX" secondItem="MbO-sd-d6S" secondAttribute="centerX" id="hGm-Qg-o4Z"/>
+                            <constraint firstItem="iV4-SQ-Ryh" firstAttribute="top" secondItem="EAT-wb-2N0" secondAttribute="bottom" constant="88" id="iND-Lg-pOv"/>
+                            <constraint firstItem="Cu4-PK-I2a" firstAttribute="top" secondItem="3vF-t9-YsH" secondAttribute="bottom" constant="186" id="ixz-HX-WVy"/>
+                            <constraint firstItem="EAT-wb-2N0" firstAttribute="centerY" secondItem="MbO-sd-d6S" secondAttribute="centerY" constant="-24" id="tW9-tV-Vi5"/>
+                            <constraint firstItem="EAT-wb-2N0" firstAttribute="top" secondItem="Cu4-PK-I2a" secondAttribute="bottom" constant="28" id="voe-HR-y2E"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kPZ-HT-jNw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="618" y="161"/>
         </scene>
     </scenes>
     <resources>
@@ -273,6 +356,9 @@
         <image name="down_full_selected" width="158" height="457"/>
         <image name="down_half" width="158" height="229"/>
         <image name="down_half_selected" width="158" height="229"/>
+        <image name="next_round_fail" width="558" height="142"/>
+        <image name="next_round_success" width="558" height="142"/>
+        <image name="play_again" width="450" height="142"/>
         <image name="up_full" width="158" height="457"/>
         <image name="up_full_selected" width="158" height="457"/>
         <image name="up_half" width="158" height="229"/>
